[gd_scene load_steps=7 format=2]

[ext_resource path="res://actor/Enemy/EnemyActor.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.028, 19.2673 )

[sub_resource type="CircleShape2D" id=2]
radius = 384.245

[sub_resource type="Animation" id=3]
resource_name = "destroy"
length = 0.1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.615686, 0.152941, 0.152941, 0.32549 )

[node name="EnemyActor" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GUI" type="Node2D" parent="."]

[node name="LifeBar" type="ProgressBar" parent="GUI"]
margin_left = -24.0
margin_top = -40.0
margin_right = 24.0
margin_bottom = -32.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -100, -100, 200, 200 )
freeze_bodies = false
[connection signal="area_entered" from="EnemyDetection" to="." method="_on_EnemyDetection_area_entered"]
[connection signal="area_exited" from="EnemyDetection" to="." method="_on_EnemyDetection_area_exited"]
[connection signal="body_entered" from="EnemyDetection" to="." method="_on_EnemyDetection_body_entered"]
[connection signal="body_exited" from="EnemyDetection" to="." method="_on_EnemyDetection_body_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
